chandeliers-lus/tests/compile_fail/ui/clk/bad-binding.stderr
error: Two subexpressions have incomparable clocks: 'when b2 and 'when b1 are incompatible
  --> tests/compile_fail/ui/clk/bad-binding.rs:10:9
   |
10 |         _n = 1 when b2;
   |         ^^^^^^^^^^^^^^
   |
note: This is clocked by 'when b1
  --> tests/compile_fail/ui/clk/bad-binding.rs:10:9
   |
10 |         _n = 1 when b2;
   |         ^^
note: defined here
  --> tests/compile_fail/ui/clk/bad-binding.rs:6:23
   |
6  |         _n : int when b1;
   |                       ^^
note: This is clocked by 'when b2
  --> tests/compile_fail/ui/clk/bad-binding.rs:10:14
   |
10 |         _n = 1 when b2;
   |              ^^^^^^^^^
note: defined here
  --> tests/compile_fail/ui/clk/bad-binding.rs:10:21
   |
10 |         _n = 1 when b2;
   |                     ^^
